--- a/disqus/dsqs.html
+++ b/disqus/dsqs.html
@@ -29,7 +29,7 @@ function receiveMessage(event)
      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
      */
     var disqus_config = function () {
-        this.page.url = "https://blog.networkchallenge.de" + new URL(unescape(window.location.hash.substring(1))).pathname;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.url = "https://blog.networkchallenge.de" + unescape(window.location.hash.substring(1));  // Replace PAGE_URL with your page's canonical URL variable
         //this.page.identifier = window.location.hash; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     (function() {  // DON'T EDIT BELOW THIS LINE
